Basic connection handler

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -2,10 +2,14 @@ cmake_minimum_required(VERSION 3.10)
 project(ntechlab_testtask)
 set(CMAKE_CXX_STANDARD 20)
 
-set(BEAST_INCLUDE_DIR ../third_party/boost/)
+set(BOOST_INCLUDE_DIR ../third_party/boost/)
 
-include_directories(${BEAST_INCLUDE_DIR})
+add_executable(${PROJECT_NAME} main.cpp TcpListner.cpp TcpListner.h fail.h)
 
-add_executable(ntechlab_testtask main.cpp)
+add_compile_definitions(BOOST_NO_EXCEPTIONS)
 
-target_link_libraries(ntechlab_testtask pthread)
+target_compile_options(${PROJECT_NAME} PUBLIC -fno-exceptions )
+
+target_link_libraries(${PROJECT_NAME} pthread)
+
+include_directories( ${BOOST_INCLUDE_DIR})
