--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_CXX_STANDARD 20)
 
 set(BOOST_INCLUDE_DIR ../third_party/boost/)
 
-add_executable(${PROJECT_NAME} main.cpp TcpListner.hpp fail.h HTTPConnection.cpp HTTPConnection.h HTTPServer.cpp HTTPServer.h)
+add_executable(${PROJECT_NAME} main.cpp TcpListener.hpp fail.h HTTPConnection.cpp HTTPConnection.h HTTPServer.cpp HTTPServer.h Responses.cpp Responses.h)
 
 add_compile_definitions(BOOST_NO_EXCEPTIONS)
 
