--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -8,9 +8,10 @@ set(LIBJPEG_STATIC_LIB_REL ../third_party/libjpeg/libjpeg.a)
 get_filename_component(LIBJPEG_STATIC_LIB_ABS ${LIBJPEG_STATIC_LIB_REL} ABSOLUTE)
 
 add_executable(${PROJECT_NAME} main.cpp TcpListener.hpp fail.h HTTPConnection.cpp HTTPConnection.h HTTPServer.cpp
-HTTPServer.h Responses.cpp Responses.h JPEGBase.cpp JPEGBase.h JPEGReader.cpp JPEGReader.h JPEGWriter.cpp JPEGWriter.h MuxMap.hpp)
+HTTPServer.h Responses.cpp Responses.h JPEGBase.cpp JPEGBase.h JPEGReader.cpp JPEGReader.h JPEGWriter.cpp JPEGWriter.h MuxMap.hpp FileServerHandler.cpp FileServerHandler.h)
 
 add_compile_definitions(BOOST_NO_EXCEPTIONS)
+#add_compile_definitions(BOOST_BEAST_USE_STD_STRING_VIEW)
 
 #target_compile_options(${PROJECT_NAME} PUBLIC -fno-exceptions )
 
